# FriendlyFire

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tutorial.py
src/: main.py
src/api/: account.py  authentication.py  course.py  docs.py  me.py  redis.py  task.py
src/bot/: bot.py
src/config/: config.py  db.py
src/core/: celery_app.py  limiter.py  redis.py  security.py  token_utils.py
src/db/: __init__.py  base.py
src/db/models/: __init__.py  account.py  courses.py  task.py
src/db/operations/: account.py  courses.py  tasks.py
src/db/types/: account.py
src/dependencies/: auth.py  database.py  stub.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 16f3d02784cb_add_password.py  690a7907bb74_add_account_type.py  720f97e43705_add_course_and_tasks_tables.py  7361997025dc_add_phone_number_and_phone_verified.py  915a15d330c2_add_initial_models.py  d8db2ab803b0_update_default_created_add.py
src/schema/: account.py  authentication.py  courses.py  task.py
src/service/: account.py  courses.py  task.py
src/utils/: security.py
src/worker/: tasks.py
