[project]
name = "friendlyfire"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
]
